# grep-rs

./: Cargo.toml  README.md
src/: errors.rs  main.rs
